--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
+    "axios": "^1.13.2",
     "framer-motion": "^12.23.24",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
