Fix: add prop-types dependency for Vite build

--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,4 +1,4 @@
- {
+{
   "name": "my-app",
   "private": true,
   "version": "0.0.0",
@@ -13,6 +13,7 @@
     "axios": "^1.13.2",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.552.0",
+    "prop-types": "^15.8.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.5",
