--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "express": "^5.1.0",
     "mongoose": "^8.19.3",
     "nodemailer": "^7.0.10",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "slugify": "^1.6.6"
   }
 }
