--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.6.0",
     "tailwindcss": "^4.1.16"
   }
 }
