--- a/my-app/package.json
+++ b/my-app/package.json
@@ -17,7 +17,8 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.5",
-    "tailwindcss": "^4.1.16"
+    "tailwindcss": "^4.1.16",
+    "react-hot-toast": "^2.6.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^5.0.4",
